# Lidar_RGB_fusion

./: README.md
data/: preprocess.py
src/cloud_perception/: CMakeLists.txt  package.xml
src/cloud_perception/scripts/: inference_data_prep.py
src/data_collection/: CMakeLists.txt  package.xml
src/data_collection/launch/: data_collection.launch  lidar_camera_collection.launch
src/data_collection/rviz_cfg/: lidar_camera_collection.rviz
src/data_collection/src/: data_collection_v1.cpp  data_collection_v2.cpp  lidar_camera_collection.cpp
src/lidar_camera_fusion/: CMakeLists.txt  package.xml
src/lidar_camera_fusion/config/: extrinsic_avia.txt  extrinsic_hz.txt  extrinsic_monash.txt  intrinsic_avia.txt  intrinsic_hz.txt  intrinsic_monash.txt
src/lidar_camera_fusion/include/: common.h  directory.h  lidar_rgb_fusion.h
src/lidar_camera_fusion/launch/: fusion_from_dir.launch  fusion_from_pcd.launch
src/lidar_camera_fusion/rviz_cfg/: sensor_fusion.rviz
src/lidar_camera_fusion/src/: fusion_from_dir.cpp  fusion_from_pcd.cpp
